--- a/WebContent/funcionario.xhtml
+++ b/WebContent/funcionario.xhtml
@@ -51,7 +51,11 @@
 						<div class="card card-w-title">
 							<p:panelGrid columns="1"
 								styleClass="form-group ui-panelgrid-blank" layout="grid">
-								<p:commandLink value="Nome: " onclick="PF('list').show();">
+								<p:commandLink value="Nome: " actionListener="#{employeeController.openEmployeeListener}"
+									process="@this" update="@none">
+									<p:ajax event="dialogReturn"
+										listener="#{employeeController.getEmployeeListener}"
+										update="@form" />
 									<p:message for="itName" escape="false" />
 								</p:commandLink>
 								<p:inputText id="itName"
@@ -134,40 +138,6 @@
 				<p:commandButton value="Não" type="button"
 					styleClass="ui-confirmdialog-no" />
 			</p:confirmDialog>
-
-			<p:dialog header="Listagem de Funcionários" widgetVar="list"
-				height="300" width="90%" modal="true" resizable="true">
-				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearch" value="#{employeeController.search}" />
-				<p:commandButton value="Pesquisar"
-					actionListener="#{employeeController.search}"
-					process="@this itSearch" update="dtList" />
-				<br />
-				<p:dataTable id="dtList" var="entity"
-					value="#{employeeController.listEmployee}">
-					<p:column headerText="Nome">
-						<p:commandLink value="#{entity.name}"
-							actionListener="#{employeeController.edit(entity.id)}"
-							process="@this" update="@form" resetValues="true" />
-					</p:column>
-
-					<p:column headerText="Cpf">
-						<h:outputText value="#{entity.cpf}" />
-					</p:column>
-
-					<p:column headerText="Data de Nascimento">
-						<h:outputLabel value="#{entity.birthDate}" />
-					</p:column>
-
-					<p:column headerText="Sexo">
-						<h:outputLabel value="#{entity.sex}" />
-					</p:column>
-
-					<p:column headerText="Situação">
-						<h:outputLabel value="#{entity.situation}" />
-					</p:column>
-				</p:dataTable>
-			</p:dialog>
 
 		</h:form>
 	</ui:define>
