--- a/WebContent/venda.xhtml
+++ b/WebContent/venda.xhtml
@@ -52,20 +52,29 @@
 							<p:panelGrid columns="1"
 								styleClass="form-group ui-panelgrid-blank" layout="grid">
 								<p:commandLink value="Visualizar vendas"
-									onclick="PF('listSale').show();">
-									<p:message for="itBuyer" escape="false" />
+									actionListener="#{saleController.openSaleListener}"
+									process="@this" update="@none">
+									<p:ajax event="dialogReturn"
+										listener="#{saleController.getSaleListener}" update="@form" />
 								</p:commandLink>
 
 								<p:commandLink value="Comprador: "
-									onclick="PF('listBuyer').show();">
+									actionListener="#{clientController.openClientListener}"
+									process="@this" update="@none">
+									<p:ajax event="dialogReturn"
+										listener="#{saleController.getClientListener}"
+										update="@form" />
 									<p:message for="itBuyer" escape="false" />
 								</p:commandLink>
 								<p:inputText id="itBuyer"
 									value="#{saleController.entity.buyer.name}" readonly="true"
 									requiredMessage="Informe o comprador." />
 
-								<p:commandLink value="Produtos: "
-									onclick="PF('listProduct').show();">
+								<p:commandLink value="Produtos em estoque: "
+									actionListener="#{itemStockController.openItemStockListener}"
+									process="@this" update="@none">
+									<p:ajax event="dialogReturn"
+										listener="#{saleController.getItemStockListener}" update="@form" />
 									<p:message for="dtListItem" escape="false" />
 								</p:commandLink>
 								<p:dataTable id="dtListItem" var="entity"
@@ -79,8 +88,9 @@
 									<p:column headerText="Quantidade">
 										<p:spinner min="0" prefix="Kg " stepFactor="0.25"
 											value="#{entity.quantity}">
-											<p:ajax listener="#{saleController.generateTotal}" update="@form"/>
-											</p:spinner>
+											<p:ajax listener="#{saleController.generateTotal}"
+												update="@form" />
+										</p:spinner>
 									</p:column>
 									<p:column headerText="Ação">
 										<p:commandButton icon="pi pi-trash" process="@form"
@@ -130,94 +140,6 @@
 				<p:commandButton value="Não" type="button"
 					styleClass="ui-confirmdialog-no" />
 			</p:confirmDialog>
-
-			<p:dialog header="Listagem de Clientes" widgetVar="listBuyer"
-				height="300" width="90%" modal="true" resizable="true">
-				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearchBuyer" value="#{clientController.search}" />
-				<p:commandButton value="Pesquisar"
-					actionListener="#{clientController.search}"
-					process="@this itSearchBuyer" update="dtListBuyer" />
-				<br />
-				<p:dataTable id="dtListBuyer" var="entity"
-					value="#{clientController.listClient}">
-					<p:column headerText="Nome">
-						<p:commandLink value="#{entity.name}"
-							action="#{saleController.addBuyer(entity)}" process="@this"
-							update="@form" resetValues="true" />
-					</p:column>
-
-					<p:column headerText="Cpf">
-						<h:outputText value="#{entity.cpf}" />
-					</p:column>
-
-					<p:column headerText="Sexo">
-						<h:outputLabel value="#{entity.sex}" />
-					</p:column>
-				</p:dataTable>
-			</p:dialog>
-
-			<p:dialog header="Listagem de Produtos" widgetVar="listProduct"
-				height="300" width="90%" modal="true" resizable="true">
-				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearchProduct"
-					value="#{itemStockController.search}" />
-				<p:commandButton value="Pesquisar"
-					actionListener="#{itemStockController.search}"
-					process="@this itSearchProduct" update="dtListProduct" />
-				<br />
-				<p:dataTable id="dtListProduct" var="entity"
-					value="#{itemStockController.stock}">
-					<p:column headerText="Nome">
-						<p:commandLink value="#{entity.name}"
-							action="#{saleController.addPurchase(entity)}" process="@this"
-							update="@form" resetValues="true" />
-					</p:column>
-
-					<p:column headerText="Valor Kg">
-						<h:outputText value="R$ #{entity.product.valueKG}" />
-					</p:column>
-
-					<p:column headerText="Categoria">
-						<h:outputLabel value="#{entity.product.category}" />
-					</p:column>
-
-					<p:column headerText="Data de Validade">
-						<h:outputLabel value="#{entity.shelfLife}" />
-					</p:column>
-
-					<p:column headerText="Quantidade Disponível">
-						<h:outputLabel value="#{entity.availableQuantity}" />
-					</p:column>
-				</p:dataTable>
-			</p:dialog>
-
-			<p:dialog header="Listagem de Vendas" widgetVar="listSale"
-				height="300" width="90%" modal="true" resizable="true">
-				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearchSale" value="#{saleController.search}" />
-				<p:commandButton value="Pesquisar"
-					actionListener="#{saleController.search}"
-					process="@this itSearchSale" update="dtListSale" />
-				<br />
-				<p:dataTable id="dtListSale" var="entity"
-					value="#{saleController.listSale}">
-					<p:column headerText="Comprador">
-						<p:commandLink value="#{entity.buyer.name}"
-							actionListener="#{saleController.edit(entity.id)}"
-							action="#{saleController.getPurchaseBySale}"
-							process="@this" update="@form" resetValues="true" />
-					</p:column>
-
-					<p:column headerText="Total">
-						<h:outputText value="R$ #{entity.total}" />
-					</p:column>
-
-					<p:column headerText="Data da venda">
-						<h:outputLabel value="#{entity.saleDate}" />
-					</p:column>
-				</p:dataTable>
-			</p:dialog>
 
 		</h:form>
 	</ui:define>
