--- a/WebContent/listener/fornecedor_lista.xhtml
+++ b/WebContent/listener/fornecedor_lista.xhtml
@@ -54,6 +54,10 @@
 									update="@form" resetValues="true" />
 							</p:column>
 
+							<p:column headerText="Razão Social">
+								<h:outputText value="#{entity.companyName}" />
+							</p:column>
+
 							<p:column headerText="Cnpj">
 								<h:outputText value="#{entity.cnpj}" />
 							</p:column>
